@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.118 2005/04/06 16:26:42 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.119 2005/04/06 16:43:59 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -195,6 +195,9 @@ PH/31 When doing a callout as part of verifying an address, Exim was not paying
       router that accepted the address. It now behaves in the same way as it
       does for delivery: the affixes are removed from the local part unless
       rcpt_include_affixes is set on the transport.
+
+PH/32 Add the sender address, as F=<...>, to the log line when logging a
+      timeout during the DATA phase of an incoming message.
 
 
 
